# leanclient

./: .coverage  .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml  release.sh  setup.py
.github/workflows/: ci.yaml  ci.yml  publish.yaml  test-full.yaml  test.yaml
docs/: requirements.txt  setup.py
docs/source/: api.rst  benchmarks.rst  conf.py  index.rst
examples/: getting_started_leanclient.ipynb  mathlib_warning_analysis.ipynb  simple_repl.ipynb
leanclient/: __init__.py  async_client.py  async_single_file_client.py  base_client.py  client.py  config.py  env_setup.py  experimental.py  file_client.py  file_manager.py  language_server.py  pool.py  single_file_client.py  utils.py
scripts/: create_lean_project.py
tests/: conftest.py  run_tests.py  test_base_client.py  test_client_benchmark.py  test_client_errors.py  test_client_files.py  test_client_requests.py  test_client_requests_async.py  test_file_client.py  test_file_manager.py  test_language_server.py  test_lsp.py  test_lsp_benchmark.py  test_lsp_errors.py  test_pool.py  test_single_file_client.py  tests.lean  utils.py
tests/benchmark/: test_benchmark.py
tests/data/: tests.lean
tests/fixtures/: mathlib_helpers.py  project_setup.py
tests/integration/: test_async_requests.py  test_cleanup.py  test_client_errors.py  test_client_requests.py  test_file_manager.py  test_file_update_optimization.py  test_line_range_diagnostics.py  test_module_hierarchy.py  test_pool.py  test_race_condition.py  test_regression_diagnostics_bugs.py  test_server_timing.py  test_single_file_client.py
(+4 files in other folders)
