[project]
name = "leanclient"
version = "0.2.1"
description = "Interact with the Lean theorem prover language server"
authors = [
    {name = "Oliver Dressler", email = "hey@oli.show"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "orjson>=3.11.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/oOo0oOo/leanclient"
Repository = "https://github.com/oOo0oOo/leanclient"
Documentation = "https://leanclient.readthedocs.io"

[project.optional-dependencies]
dev = [
    "gprof2dot>=2024.6.6",
    "black[jupyter]>=24.10.0",
    "sphinx>=8.1.3",
    "sphinx-rtd-theme>=3.0.2",
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leanclient"]